delete season status
